# codex-deploy

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: ai-dev-installer-安装说明.md  codex-deploy-安装说明.md
src/: App.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: chat.rs  history.rs  image.rs  installer.rs  settings.rs  subtitles.rs
src-tauri/src/models/: installer.rs
src-tauri/src/services/: chat.rs  credentials.rs  image.rs  settings.rs  srt.rs  subtitles.rs
src-tauri/src/services/gemini/: client.rs
src-tauri/src/services/installer/: environment.rs  executor.rs  logging.rs  manifest.rs  mod.rs  service.rs  tests.rs
src-tauri/src/storage/: db.rs  history.rs
src-tauri/tests/: chat.rs  contracts.rs  credentials.rs  db.rs  image.rs  srt.rs  subtitles.rs
src/__tests__/: AppShell.test.tsx
src/components/: ApiKeyCard.tsx  ImageGrid.tsx  InstallerLogPanel.tsx  InstallerProgressPanel.tsx  InstallerStatusCard.tsx  MessageList.tsx
src/lib/: chat.ts  history.ts  image.ts  installer.ts  settings.ts  subtitles.ts  tauri.ts  types.ts
src/pages/: ChatPage.tsx  HistoryDrawer.tsx  ImagePage.tsx  InstallerPage.tsx  SettingsPage.tsx  SubtitlePage.tsx
src/pages/__tests__/: ChatPage.test.tsx  ImagePage.test.tsx  InstallerPage.test.tsx  SettingsPage.test.tsx  SubtitlePage.test.tsx
