[package]
name = "molspark_desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "molspark_desktop"
path = "src/lib.rs"

[[bin]]
name = "molspark_desktop"
path = "src/main.rs"

[dependencies]
dirs = "5.0.1"
hex = "0.4"
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
which = "6.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
